<package format="2">
  <name>choreonoid_ros_pkg</name>
  <version>1.5.0</version>
  <description>
    Meta package to install choreonoid_ros
  </description>
  <maintainer email="f-kanehiro@aist.go.jp">Fumio Kanehiro</maintainer>

  <license>MIT</license>

  <url type="website">http://choreonoid.org/</url>
  <url type="bugtracker">https://github.com/s-nakaoka/choreonoid/issues</url>
  <url type="repository">https://github.com/s-nakaoka/choreonoid</url>

  <author>Shin'ichiro Nakaoka and Choreonoid Development Team, AIST.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>choreonoid_ros</build_depend>
  <build_depend>choreonoid_plugins</build_depend>
  <!--
  <build_depend>jvrc_models</build_depend>
  -->

  <exec_depend>choreonoid_ros</exec_depend>
  <exec_depend>choreonoid_plugins</exec_depend>
  <!--
  <exec_depend>jvrc_models</exec_depend>
  -->

  <export>
  </export>
</package>
